--- a/References/RPi/index.html
+++ b/References/RPi/index.html
@@ -21,6 +21,7 @@
 <h2> Video </h2>
 <ul>
   <li> <a href="https://ffmpeg.org/"> FFMPEG </a> </li>
+  <li> <a href="https://trac.ffmpeg.org/wiki/Create%20a%20thumbnail%20image%20every%20X%20seconds%20of%20the%20video"> FFMPEG - saving snapshots of a video</a></li>
 </ul>
 
 <h2> Audio </h2>
